# VapoR

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  openvrpaths.vrpath.in
data/: config.json
data/device_profiles/: alvr_quest2.json  alvr_quest3.json  steamvr_vive.json
data/property_sets/: alvr_quest2_controller_left.json  alvr_quest2_controller_right.json  alvr_quest2_hmd.json  alvr_quest_plus_controller_left.json  alvr_quest_plus_controller_right.json  steamvr_vive_controller_left.json  steamvr_vive_controller_right.json  steamvr_vive_hmd.json
data/render_models/: generic_hmd.json  oculus_quest2_controller_left.json  oculus_quest2_controller_right.json  oculus_quest_plus_controller_left.json  oculus_quest_plus_controller_right.json  vr_controller_vive_1_5.json
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  backend.cpp  backend.h  device_property_set.cpp  device_property_set.h  event_queue.cpp  event_queue.h  frame_queue.cpp  frame_queue.h  frame_state.cpp  frame_state.h  haptic_queue.cpp  haptic_queue.h  input.h  input_manager.cpp  input_manager.h  input_profile.h  legacy_input.cpp  legacy_input.h  opengl.cpp  opengl.h  openxr.cpp  openxr.h  path_handle_registry.cpp  path_handle_registry.h  pose_set.h  render_model.cpp  render_model.h  vulkan.h  vulkan_exported_texture_holder.h
src/backend/image_capture/: CMakeLists.txt  image_capture.cpp  image_capture.h  image_capture_buffer_manager.h  image_capture_impl.h
src/backend/input/: CMakeLists.txt  action_manager.cpp  action_manager.h  input_devices.h  input_state.h  mode.cpp  mode.h
src/backend/input_profiles/: CMakeLists.txt  oculus_touch.cpp  oculus_touch.h  vive_controller.cpp  vive_controller.h
src/backend/windows/: CMakeLists.txt  transform.cpp  transform.h  window.cpp  window.h  window_manager.cpp  window_manager.h  window_renderer.cpp  window_renderer.h
src/config/: CMakeLists.txt  config.cpp  config.h  device_profile.cpp  device_profile.h  fixes.cpp  fixes.h  paths.cpp  paths.h  startup_params.cpp  startup_params.h
src/log/: abort.h  log.h  stub.h
src/openvr/: CMakeLists.txt  types.h  types_application.h  types_event.h  types_geometry.h  types_input.h  types_misc.h  types_overlay.h  types_render.h  types_rendermodel.h  types_screenshot.h
src/openvr/impl/: CMakeLists.txt  applications.cpp  applications.h  chaperone.cpp  chaperone.h  client_core.cpp  client_core.h  compositor.cpp  compositor.h  extended_display.cpp  extended_display.h  init.cpp  init.h  input.cpp  input.h  overlay.cpp  overlay.h  rendermodel.cpp  rendermodel.h  screenshot.cpp  screenshot.h  settings.cpp  settings.h  system.cpp  system.h
src/openvr/impl/input/: action_manager.cpp  action_manager.h  binding.cpp  binding.h  input_devices.h  input_source_utils.h  input_state.h  mode.cpp  mode.h  path_handle_registry.cpp  path_handle_registry.h
src/openvr/impl/render/: image_capture_helper.cpp  image_capture_helper.h
src/openvr/impl/utils/: legacy_input.h  matrix.h  pose.h  time.h
src/openvr/interfaces/: CMakeLists.txt  applications.cpp  applications.h  chaperone.cpp  chaperone.h  client_core.cpp  client_core.h  compositor.cpp  compositor.h  extended_display.cpp  extended_display.h  input.cpp  input.h  interfaces.h  overlay.cpp  overlay.h  rendermodel.cpp  rendermodel.h  screenshot.cpp  screenshot.h  settings.cpp  settings.h  system.cpp  system.h
src/openvr/interfaces/utils/: legacy_helpers.h
src/utils/: matrix.h
tools/: dump_all_props.py  dump_property_set.py  dump_render_model.py
